tests/NormalTests/paczka1/fuzzy1/78155447.err
Error in line 5: FgTXD A598 57,1
Error in line 8: fsbFZvkd A486 66,0
Error in line 27: mLfyyEF4G A372 64,7
Error in line 23: A486 A372 25,1
